contrib/libs/proj/src/proj.h


union PJ_COORD;
typedef union PJ_COORD PJ_COORD;
struct P5_FACTORS {          
    double meridional_scale; 
    double parallel_scale;   
    double areal_scale;      
    double angular_distortion;      
    double meridian_parallel_angle; 
    double meridian_convergence;    
    double tissot_semimajor; 
    double tissot_semiminor; 
    double dx_dlam, dx_dphi;
    double dy_dlam, dy_dphi;
};
typedef struct P5_FACTORS PJ_FACTORS;
struct PJconsts;
typedef struct PJconsts PJ; 
struct PJ_PRIME_MERIDIANS {
    const char *id;   
    const char *defn; 
};
typedef struct PJ_PRIME_MERIDIANS PJ_PRIME_MERIDIANS;
typedef struct {
    double x, y, z, t;
} PJ_XYZT;
typedef struct {
    double u, v, w, t;
} PJ_UVWT;
typedef struct {
    double lam, phi, z, t;
} PJ_LPZT;
typedef struct {
    double o, p, k;
} PJ_OPK; 
typedef struct {
    double e, n, u;
} PJ_ENU; 
typedef struct {
    double s, a1, a2;
} PJ_GEOD; 
typedef struct {
    double u, v;
} PJ_UV;
typedef struct {
    double x, y;
} PJ_XY;
typedef struct {
    double lam, phi;
} PJ_LP;
typedef struct {
    double x, y, z;
} PJ_XYZ;
typedef struct {
    double u, v, w;
} PJ_UVW;
typedef struct {
    double lam, phi, z;
} PJ_LPZ;
union PJ_COORD {
    double v[4]; 
    PJ_XYZT xyzt;
    PJ_UVWT uvwt;
    PJ_LPZT lpzt;
    PJ_GEOD geod;
    PJ_OPK opk;
    PJ_ENU enu;
    PJ_XYZ xyz;
    PJ_UVW uvw;
    PJ_LPZ lpz;
    PJ_XY xy;
    PJ_UV uv;
    PJ_LP lp;
};
struct pj_ctx;
typedef struct pj_ctx PJ_CONTEXT;
int PROJ_DLL proj_context_set_enable_network(PJ_CONTEXT *ctx, int enabled);
int PROJ_DLL proj_context_is_network_enabled(PJ_CONTEXT *ctx);
const char PROJ_DLL *proj_context_get_url_endpoint(PJ_CONTEXT *ctx);
const char PROJ_DLL *proj_context_get_user_writable_directory(PJ_CONTEXT *ctx,
                                                              int create);
int PROJ_DLL proj_download_file(PJ_CONTEXT *ctx, const char *url_or_filename,
                                int ignore_ttl_setting,
                                int (*progress_cbk)(PJ_CONTEXT *, double pct,
                                                    void *user_data),
                                void *user_data);
PJ_FACTORS PROJ_DLL proj_factors(PJ *P, PJ_COORD lp);
const PJ_PRIME_MERIDIANS PROJ_DLL *proj_list_prime_meridians(void);
typedef char **PROJ_STRING_LIST;
typedef enum {
    PJ_CATEGORY_ELLIPSOID,
    PJ_CATEGORY_PRIME_MERIDIAN,
    PJ_CATEGORY_DATUM,
    PJ_CATEGORY_CRS,
    PJ_CATEGORY_COORDINATE_OPERATION,
    PJ_CATEGORY_DATUM_ENSEMBLE
} PJ_CATEGORY;
typedef enum {
    PJ_TYPE_UNKNOWN,
    PJ_TYPE_ELLIPSOID,
    PJ_TYPE_PRIME_MERIDIAN,
    PJ_TYPE_GEODETIC_REFERENCE_FRAME,
    PJ_TYPE_DYNAMIC_GEODETIC_REFERENCE_FRAME,
    PJ_TYPE_VERTICAL_REFERENCE_FRAME,
    PJ_TYPE_DYNAMIC_VERTICAL_REFERENCE_FRAME,
    PJ_TYPE_DATUM_ENSEMBLE,
    PJ_TYPE_CRS,
    PJ_TYPE_GEODETIC_CRS,
    PJ_TYPE_GEOCENTRIC_CRS,
    PJ_TYPE_GEOGRAPHIC_CRS,
    PJ_TYPE_GEOGRAPHIC_2D_CRS,
    PJ_TYPE_GEOGRAPHIC_3D_CRS,
    PJ_TYPE_VERTICAL_CRS,
    PJ_TYPE_PROJECTED_CRS,
    PJ_TYPE_COMPOUND_CRS,
    PJ_TYPE_TEMPORAL_CRS,
    PJ_TYPE_ENGINEERING_CRS,
    PJ_TYPE_BOUND_CRS,
    PJ_TYPE_OTHER_CRS,
    PJ_TYPE_CONVERSION,
    PJ_TYPE_TRANSFORMATION,
    PJ_TYPE_CONCATENATED_OPERATION,
    PJ_TYPE_OTHER_COORDINATE_OPERATION,
    PJ_TYPE_TEMPORAL_DATUM,
    PJ_TYPE_ENGINEERING_DATUM,
    PJ_TYPE_PARAMETRIC_DATUM,
    PJ_TYPE_DERIVED_PROJECTED_CRS,
    PJ_TYPE_COORDINATE_METADATA,
} PJ_TYPE;
typedef enum {
    PROJ_GRID_AVAILABILITY_USED_FOR_SORTING,
    PROJ_GRID_AVAILABILITY_DISCARD_OPERATION_IF_MISSING_GRID,
    PROJ_GRID_AVAILABILITY_IGNORED,
    PROJ_GRID_AVAILABILITY_KNOWN_AVAILABLE,
} PROJ_GRID_AVAILABILITY_USE;
typedef enum {
    PROJ_SPATIAL_CRITERION_STRICT_CONTAINMENT,
    PROJ_SPATIAL_CRITERION_PARTIAL_INTERSECTION
} PROJ_SPATIAL_CRITERION;
typedef struct {
    char *auth_name;
    char *code;
    char *name;
    PJ_TYPE type;
    int deprecated;
    int bbox_valid;
    double west_lon_degree;
    double south_lat_degree;
    double east_lon_degree;
    double north_lat_degree;
    char *area_name;
    char *projection_method_name;
    char *celestial_body_name;
} PROJ_CRS_INFO;
typedef struct {
    const PJ_TYPE *types;
    size_t typesCount;
    int crs_area_of_use_contains_bbox;
    int bbox_valid;
    double west_lon_degree;
    double south_lat_degree;
    double east_lon_degree;
    double north_lat_degree;
    int allow_deprecated;
    const char *celestial_body_name;
} PROJ_CRS_LIST_PARAMETERS;
typedef struct {
    char *auth_name;
    char *code;
    char *name;
    char *category;
    double conv_factor;
    char *proj_short_name;
    int deprecated;
} PROJ_UNIT_INFO;
typedef struct PJ_OBJ_LIST PJ_OBJ_LIST;
void PROJ_DLL proj_string_list_destroy(PROJ_STRING_LIST list);
PJ PROJ_DLL *proj_create_from_database(PJ_CONTEXT *ctx, const char *auth_name,
                                       const char *code, PJ_CATEGORY category,
                                       int usePROJAlternativeGridNames,
                                       const char *const *options);
PJ_OBJ_LIST PROJ_DLL *
proj_create_from_name(PJ_CONTEXT *ctx, const char *auth_name,
                      const char *searchedName, const PJ_TYPE *types,
                      size_t typesCount, int approximateMatch,
                      size_t limitResultCount, const char *const *options);
int PROJ_DLL proj_is_deprecated(const PJ *obj);
PJ_OBJ_LIST PROJ_DLL *proj_get_non_deprecated(PJ_CONTEXT *ctx, const PJ *obj);
PROJ_STRING_LIST PROJ_DLL proj_get_authorities_from_database(PJ_CONTEXT *ctx);
PROJ_STRING_LIST PROJ_DLL proj_get_codes_from_database(PJ_CONTEXT *ctx,
                                                       const char *auth_name,
                                                       PJ_TYPE type,
                                                       int allow_deprecated);
PROJ_CRS_LIST_PARAMETERS PROJ_DLL *proj_get_crs_list_parameters_create(void);
void PROJ_DLL
proj_get_crs_list_parameters_destroy(PROJ_CRS_LIST_PARAMETERS *params);
PROJ_CRS_INFO PROJ_DLL **
proj_get_crs_info_list_from_database(PJ_CONTEXT *ctx, const char *auth_name,
                                     const PROJ_CRS_LIST_PARAMETERS *params,
                                     int *out_result_count);
void PROJ_DLL proj_crs_info_list_destroy(PROJ_CRS_INFO **list);
PROJ_UNIT_INFO PROJ_DLL **proj_get_units_from_database(PJ_CONTEXT *ctx,
                                                       const char *auth_name,
                                                       const char *category,
                                                       int allow_deprecated,
                                                       int *out_result_count);
void PROJ_DLL proj_unit_list_destroy(PROJ_UNIT_INFO **list);
typedef struct PJ_OPERATION_FACTORY_CONTEXT PJ_OPERATION_FACTORY_CONTEXT;
PJ_OPERATION_FACTORY_CONTEXT PROJ_DLL *
proj_create_operation_factory_context(PJ_CONTEXT *ctx, const char *authority);
void PROJ_DLL
proj_operation_factory_context_destroy(PJ_OPERATION_FACTORY_CONTEXT *ctx);
void PROJ_DLL proj_operation_factory_context_set_desired_accuracy(
    PJ_CONTEXT *ctx, PJ_OPERATION_FACTORY_CONTEXT *factory_ctx,
    double accuracy);
void PROJ_DLL proj_operation_factory_context_set_area_of_interest(
    PJ_CONTEXT *ctx, PJ_OPERATION_FACTORY_CONTEXT *factory_ctx,
    double west_lon_degree, double south_lat_degree, double east_lon_degree,
    double north_lat_degree);
void PROJ_DLL proj_operation_factory_context_set_spatial_criterion(
    PJ_CONTEXT *ctx, PJ_OPERATION_FACTORY_CONTEXT *factory_ctx,
    PROJ_SPATIAL_CRITERION criterion);
void PROJ_DLL proj_operation_factory_context_set_grid_availability_use(
    PJ_CONTEXT *ctx, PJ_OPERATION_FACTORY_CONTEXT *factory_ctx,
    PROJ_GRID_AVAILABILITY_USE use);
void PROJ_DLL proj_operation_factory_context_set_discard_superseded(
    PJ_CONTEXT *ctx, PJ_OPERATION_FACTORY_CONTEXT *factory_ctx, int discard);
void PROJ_DLL proj_operation_factory_context_set_allow_ballpark_transformations(
    PJ_CONTEXT *ctx, PJ_OPERATION_FACTORY_CONTEXT *factory_ctx, int allow);
PJ_OBJ_LIST PROJ_DLL *
proj_create_operations(PJ_CONTEXT *ctx, const PJ *source_crs,
                       const PJ *target_crs,
                       const PJ_OPERATION_FACTORY_CONTEXT *operationContext);
PJ PROJ_DLL *proj_crs_get_coordoperation(PJ_CONTEXT *ctx, const PJ *crs);
int PROJ_DLL proj_coordoperation_get_method_info(
    PJ_CONTEXT *ctx, const PJ *coordoperation, const char **out_method_name,
    const char **out_method_auth_name, const char **out_method_code);
int PROJ_DLL proj_coordoperation_is_instantiable(PJ_CONTEXT *ctx,
                                                 const PJ *coordoperation);
int PROJ_DLL proj_coordoperation_has_ballpark_transformation(
    PJ_CONTEXT *ctx, const PJ *coordoperation);
int PROJ_DLL proj_coordoperation_get_param_count(PJ_CONTEXT *ctx,
                                                 const PJ *coordoperation);
int PROJ_DLL proj_coordoperation_get_param_index(PJ_CONTEXT *ctx,
                                                 const PJ *coordoperation,
                                                 const char *name);
int PROJ_DLL proj_coordoperation_get_param(
    PJ_CONTEXT *ctx, const PJ *coordoperation, int index, const char **out_name,
    const char **out_auth_name, const char **out_code, double *out_value,
    const char **out_value_string, double *out_unit_conv_factor,
    const char **out_unit_name, const char **out_unit_auth_name,
    const char **out_unit_code, const char **out_unit_category);
int PROJ_DLL proj_coordoperation_get_grid_used_count(PJ_CONTEXT *ctx,
                                                     const PJ *coordoperation);
int PROJ_DLL proj_coordoperation_get_grid_used(
    PJ_CONTEXT *ctx, const PJ *coordoperation, int index,
    const char **out_short_name, const char **out_full_name,
    const char **out_package_name, const char **out_url,
    int *out_direct_download, int *out_open_license, int *out_available);
double PROJ_DLL proj_coordoperation_get_accuracy(PJ_CONTEXT *ctx,
                                                 const PJ *obj);
int PROJ_DLL proj_coordoperation_get_towgs84_values(
    PJ_CONTEXT *ctx, const PJ *coordoperation, double *out_values,
    int value_count, int emit_error_if_incompatible);
int PROJ_DLL proj_concatoperation_get_step_count(PJ_CONTEXT *ctx,
                                                 const PJ *concatoperation);
PJ PROJ_DLL *proj_concatoperation_get_step(PJ_CONTEXT *ctx,
                                           const PJ *concatoperation,
                                           int i_step);